examples/test/testpolicy4050.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4050
  namespace: namespace176
spec:
  podSelector:
    matchLabels:
      key10: value31
      key5: value12
      key27: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value1
          key24: value46
          key21: value13
      podSelector:
        matchLabels:
          key48: value2
          key19: value3
          key17: value26
